--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "express-typescript-supabase",
+  "name": "files_manager",
   "version": "1.0.0",
-  "description": "An Express JS Template Repository for getting started with API development using supabase and typescript",
+  "description": "This project is a summary of the ALX back-end trimester: authentication, NodeJS, MongoDB, Redis, pagination and background processing.",
   "main": "src/server.ts",
   "scripts": {
     "start": "node dist/app.js",
@@ -15,11 +15,19 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.45.3",
     "body-parser": "^1.20.2",
+    "bull": "^3.16.0",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
-    "supabase": "^1.191.3"
+    "image-thumbnail": "^1.0.10",
+    "mime-types": "^2.1.27",
+    "mongodb": "^3.5.9",
+    "redis": "^4.7.0",
+    "sha1": "^1.1.1",
+    "supabase": "^1.191.3",
+    "uuid": "^8.2.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.19",
@@ -28,8 +36,15 @@
     "@types/mocha": "^10.0.7",
     "@types/node": "^22.5.2",
     "chai": "^5.1.1",
+    "chai-http": "^4.3.0",
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^28.8.3",
     "mocha": "^10.7.3",
     "nodemon": "^3.1.4",
+    "request": "^2.88.0",
+    "sinon": "^7.5.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
